# SyncWave

./: .gitignore  CMakeLists.txt  readme.md
g3log/test_unit/: test_filechange.cpp
include/: Prefs.hpp  callbacks.hpp  cleanup.hpp  common.hpp  logger.hpp  miniaudio.hpp
src/: Prefs.cpp  main.cpp  miniaudio.cpp
src/g3log/: Options.cmake
src/g3log/example/: main_fatal_choice.cpp
src/g3log/src/g3log/: logworker.hpp
src/include/: CustomSink.hpp  LOG.h  Prefs.h  cleanup.h  common.h  common.hpp  constants.h
